<resources>
    <string name="app_name">EasyShop</string>
    <string name="saludo_inicio">Bienvenidos</string>
    <string name="descripcion_prelog">Dónde comprar es muy fácil</string>
    <string name="iniciar_sesi_n_como">Iniciar sesión como:</string>
    <string name="usuario">Usuario</string>
    <string name="administrador">Administrador</string>
    <string name="iniciar_con_google">Iniciar con Google</string>
    <string name="iniciar_con_facebook">Iniciar con Facebook</string>
    <string name="opciones_ingreso">También puedes iniciar sesión con:</string>
    <string name="enviar_c_digo">Enviar código</string>
    <string name="instruccion_codigo">Ingrese el código recibido</string>
    <string name="instruccion_movil">Ingrese su número móvil</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="logotransimg">logotransimg</string>
    <string name="confirmar">Confirmar</string>
    <string name="ingresar_num">Ingrese su número</string>
    <string name="validandoNum">Validando número</string>
    <string name="esperaraVali_num">Espere mientras se valida su número.</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="complete_sus_datos">COMPLETE SUS DATOS</string>
    <string name="imagen_setup">imagen setup</string>
    <string name="continuar">Continuar</string>
    <string name="ingrese_su_ciudad">Ingrese su ciudad</string>
    <string name="ingrese_su_tel_fono">Ingrese su teléfono</string>
    <string name="ingrese_su_direcci_n">Ingrese su dirección</string>
    <string name="ingrese_su_nombre">Ingrese su nombre</string>
    <string name="imagen_login_usuario">imagen login usuario</string>
    <string name="imagen_login_admin">imagen login admin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">CLose navigation drawer</string>


</resources>