<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Setup">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complete_sus_datos"
        android:textAlignment="center"
        android:background="@color/primario"
        android:textColor="@color/secundario"
        android:padding="18sp"
        android:textStyle="bold|italic"
        />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setup_imagen"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/usuario_setup"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        app:civ_border_color="@color/black"
        android:contentDescription="@string/imagen_setup"
        />
    <EditText
        android:id="@+id/txt_setup_nombre"
        android:layout_gravity="center"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:textColor="@color/secundario"
        android:gravity="center"
        android:hint="@string/ingrese_su_nombre"
        android:inputType="text"
        android:layout_margin="20dp"
        android:autofillHints="false"
        />
    <EditText
        android:id="@+id/txt_setup_direccion"
        android:layout_gravity="center"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:textColor="@color/secundario"
        android:gravity="center"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/ingrese_su_direcci_n"
        android:inputType="text"
        android:autofillHints="false"
        />
    <EditText
        android:id="@+id/txt_setup_telefono"
        android:layout_gravity="center"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:textColor="@color/secundario"
        android:gravity="center"
        android:hint="@string/ingrese_su_tel_fono"
        android:inputType="phone"
        android:layout_margin="20dp"
        android:autofillHints="false"
        />
    <EditText
        android:id="@+id/txt_setup_ciudad"
        android:layout_gravity="center"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:textColor="@color/secundario"
        android:gravity="center"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/ingrese_su_ciudad"
        android:inputType="text"
        android:autofillHints="false"
        />
    <Button
        android:id="@+id/btn_setup"
        android:layout_gravity="center"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/primario"
        android:textColor="@color/secundario"
        android:textSize="18sp"
        android:text="@string/continuar"
        />


</LinearLayout>