<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/home"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/secundario"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:text="@string/saludo_inicio"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="182dp"
            android:src="@drawable/logo_transparent"
            android:contentDescription="@string/logotransimg"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/secundario"
            android:text="@string/descripcion_prelog"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/iniciar_sesi_n_como"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="@color/secundario"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/btnUsuario"
            android:layout_gravity="center"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/primario"
            android:textColor="@color/secundario"
            android:padding="10dp"
            android:text="@string/usuario" />

        <Button
            android:id="@+id/btnAdmin"
            android:layout_gravity="center"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/primario"
            android:textColor="@color/secundario"
            android:padding="10dp"
            android:text="@string/administrador" />
    </LinearLayout>

</LinearLayout>